--- a/src/config.json
+++ b/src/config.json
@@ -7,6 +7,10 @@
         "register":"/register",
         "addPost": "/addblogpost",
         "addNewComment": "/addblogcomment",
-        "getPosts": "/getallblogposts"
+        "getPosts": "/getallblogposts",
+        "getMyPinCode": "/getpincode",
+        "getMyPosts": "/getalldirectposts",
+        "addDirectPost":"/adddirectpost",
+        "addDirectComment":"/adddirectcomment"
     }
 }
