--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1"
